--- a/index.html
+++ b/index.html
@@ -22,67 +22,165 @@
   <meta name="theme-color" content="#fafafa">
 </head>
 
-<body>
-  <!-- Add your site or application content here -->
-  <div id="navbar">
-    <header id="head">
-      <img style="margin-left: 19.53%;position: absolute; top: 15px;"src="img/mail.png">
-      <img style="margin-left: 20.52%;position: absolute; top: 15px;"src="img/info.png">
-      <img style="margin-left: 25.94%;position: absolute; top: 13px;"src="img/phoneico.png">
-      <img style="margin-left: 26.82%;position: absolute; top: 15px;"src="img/phone.png">
-      <ul id="u1">
-         <li id="l1"><a  href="https://www.facebook.com"><img src="img/f.png"></a></li>
-         <li id="l2"><a  href=""><img src="img/g+.png"></a></li>
-         <li id="l3"><a  href="https://www.twitter.com"><img src="img/t.png"></a></li>
-         <li id="l4"><a  href="https://www.pintrest.com"><img src="img/p.png"></a></li>
-         <li id="l5"><a  href="https://www.behance.net"><img src="img/be.png"></a></li>
-         <li id="l6"><a  href="https://www.dribbble.com"><img src="img/drip.png"></a></li>
-      </ul>
-    </header>
-    <header id="mainhead">
-      <img id="searchico" style="margin-left: 78.65%;position: absolute; margin-top: 93px;"src="img/search.png">
-      <img class="logo"src="img/logo.png" id="logo">
-      <ul id="u2">
-        <li><a class="active" href="#home"><img src="img/home.png"></a></li>
-        <li><a href="#portfolio"><img src="img/portfolio.png"></a></li>
-        <li><a href="#blog"><img src="img/blog.png"></a></li>
-        <li><a href="#pages"><img src="img/pages.png"></a></li>
-        <li><a href="#features"><img src="img/features.png"></a></li>
-        <li>
-          <div class="dropdown">
-            <button class="dropbtn">
-              <a href="#mega menu"><img src="img/megamenu.png"></a>
-            </button>
-            <div class="dropdown-content">
-              <div class="row">
-                <div class="column">
-                  <h3>Focus On</h3>
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
-                </div>
-                <div class="column">
-                  <h3>Special Pages</h3>
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
-                </div>
-                <div class="column">
-                  <h3>Latest Works</h3>
-                  <a href="#">Link 1</a>
-                  <a href="#">Link 2</a>
-                  <a href="#">Link 3</a>
-                </div>
-              
+<body style="height: 3905px;">
+  <div  style="background-color:#f5f7fb;height: 73px;">
+    <div id="navbar1">
+      <a ><img style="left: 19.53%;position: absolute; top: 15px;padding: 0px;"src="img/mail.png"></a>
+      <a ><img style="left: 20.52%;position: absolute; top: 15px;padding: 0px;"src="img/info.png"></a>
+      <a ><img style="left: 25.94%;position: absolute; top: 13px;padding: 0px;"src="img/phoneico.png"></a>
+      <a ><img style="left: 26.82%;position: absolute; top: 15px;padding: 0px;"src="img/phone.png"></a>
+      <div style="margin-left: 71%;">
+        <a id="l1"  href="https://www.facebook.com"><img src="img/f.png"></a>
+        <a id="l2"  href=""><img src="img/g+.png"></a>
+        <a id="l3"  href="https://www.twitter.com"><img src="img/t.png"></a>
+        <a id="l4"  href="https://www.pintrest.com"><img src="img/p.png"></a>
+        <a id="l5" href="https://www.behance.net"><img src="img/be.png"></a>
+        <a id="l6" href="https://www.dribbble.com"><img src="img/drip.png"></a>
+      </div>
+    </div>
+  </div>
+  <div style="background-color:#f5f7fb;height:82px;">
+    <div id="navbar2" >
+      <a style="padding:0;left: 19.5%;position: absolute;"><img  id="logo" src="img/logo.png"></a>
+      <div style="margin-left: 32.55%;">
+        <a href="#home"><img src="img/home.png"></a>
+        <a href="#portfolio"><img src="img/portfolio.png"></a>
+        <a href="#blog"><img src="img/blog.png"></a>
+        <a href="#pages"><img src="img/pages.png"></a>
+        <a href="#features"><img src="img/features.png"></a>
+        <div class="dropdown">
+          <button class="dropbtn" style="padding: 0px;">
+            <a href="#mega menu"><img src="img/megamenu.png"></a>
+          </button>
+          <div class="dropdown-content">
+            <div class="row">
+              <div class="column">
+                <h3>Focus On</h3>
+                <figure class="hover" style="margin-left: 0px;margin-top: 0px;margin-right: 0px;">
+                  <img src="img/pic1.png">
+                  <div class="text">+</div>
+                </figure>
+                <br>
+                <p class="line" style="line-height:1;">Lorem ipsum dolor sit amet, illum definitiones no quo</p>
+                <button class="button1">View Project</button>
+              </div>
+              <div class="column">
+                <h3>Special Pages</h3>
+                <p class="line">	&#9675; 3 columns detail color</p>
+                <p class="line">	&#9675; Fullscreen grid portfolio</p>
+                <p class="line"> &#9675; About page II</p>
+                <p class="line">	&#9675; Service page I</p>
+                <p class="line">	&#9675; Pricing page I</p>
+                <p class="line"><span style="color:#29b796;font-weight: 900;">&#9675;</span>Conact page I</p>
+              </div>
+              <div class="column">
+                <h3>Latest Works</h3>
+                <figure class="hover" style="margin:0;margin-bottom: 5px;">
+                  <img src="img/pic2.png">
+                  <div class="text">+</div>
+                </figure>
+                <figure class="hover" style="margin: 0;margin-left: 5px;margin-bottom: 5px;">
+                  <img src="img/pic3.png">
+                  <div class="text">+</div>
+                </figure>
+                <figure class="hover" style="margin: 0px;margin-bottom: 5px;">
+                  <img src="img/pic4.png">
+                  <div class="text">+</div>
+                </figure>
+                <figure class="hover" style="margin: 0;margin-left: 5px;margin-bottom: 5px;">
+                  <img src="img/pic5.png">
+                  <div class="text">+</div>
+                </figure>
+                <figure class="hover" style="margin: 0px;margin-bottom: 5px;">
+                  <img src="img/pic6.png">
+                  <div class="text">+</div>
+                </figure>
+                <figure class="hover" style="margin: 0;margin-left: 5px;margin-bottom: 5px;">
+                  <img src="img/pic7.png">
+                  <div class="text">+</div>
+                </figure>
+              </div>
+              <div class="column">
+                <h3>About Us</h3>
+                <p class="line"style="line-height:1;margin-top:-5px;">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                <button class="button1">Read More</button>
               </div>
             </div>
           </div>
-        </li>
-        <li><a href="#conact"><img src="img/conact.png"></a></li>
-      </ul>
-    </header> 
+        </div>
+        <a href="#conact"><img src="img/conact.png"></a>
+        <a class="searchico" style="left: 78.65%;"><img class="searchico" style="margin-left: 30px;"src="img/search.png"></a>
+      </div>
+  
+    </div>
   </div>
-
+  <div id="main" style="background-image: url(img/bg.png);height: 906px;"></div>
+  <div id="main2" style="background-color: white;height:672px;"></div>
+  <div id="main3" style="background-color:#f2f5f7;height:1270px;"></div>
+  <div id="main4" style="background-color:white;height:482px;">
+    <p style="font-size: 40px;text-align:center;font-weight: bold;">Want to work with us?</p>
+  </div>
+  <div id="footer" style="height:364px;background-color: #2f4052;">
+    <div class="column1"style="margin-left:19.48%;height:270px;">
+      <h3>Who we are</h3>
+      <img src="img/logofooter.png">
+      <p>Magnis modipsae voloratati andigen daepeditem quiat.</p>
+      <div><a id="link" href="">More about us <img id="movepic" src="img/arrowright.png"></a></div>
+    </div>
+    <div class="column1"style="margin-left:35.10%;">
+      <h3>Latest works</h3>
+      <figure class="hover" style="margin:0;margin-bottom: 5px;">
+        <img src="img/p1.png">
+        <div class="text">+</div>
+      </figure>
+      <figure class="hover" style="margin: 0;margin-left: 5px;margin-bottom: 5px;">
+        <img src="img/p3.png">
+        <div class="text">+</div>
+      </figure>
+      <figure class="hover" style="margin: 0px;margin-bottom: 5px;">
+        <img src="img/p2.png">
+        <div class="text">+</div>
+      </figure>
+      <figure class="hover" style="margin: 0;margin-left: 5px;margin-bottom: 5px;">
+        <img src="img/p4.png">
+        <div class="text">+</div>
+      </figure>
+    </div>
+    <div class="column1"style="margin-left:50.78%;">
+      <h3>Get in touch</h3>
+      <p style="margin:0px;">Doloreiur quia commolu ptatemp dolupta oreprerum t</p>
+      <p style="margin: 0px;margin-top: 10px;"><img style="margin-bottom: 2px;"src="img/nav.png">   84 Street,City,State 24813</p>
+      <p style="margin: 0px;margin-top: 7px;"><img style="margin-bottom: 2px;"src="img/phoneico.png">   +00 (123) 456 78 90</p>
+      <p style="margin: 0px;margin-top: 7px;"><img style="margin-bottom: 2px;"src="img/mail.png">   <a id="link" href="">info@reen.com</a></p>
+    </div>
+    <div class="column1"style="margin-left:66.35%;">
+      <h3>Free update</h3>
+      <p style="margin: 0px;">Conecus iure posae volor remped modis  aut lor vol</p>
+      <form>
+        <input type="text" id="input" placeholder="Enter your email address">
+        <input type="submit"  id="input1" value="SUBSCRIBE">
+      </form>
+    </div>
+  </div>
+  <div id="footer2" style="height:86px;background-color: #283645;">
+    <p style="margin:0px;margin-left:19.53%;padding-top:30px;color:#5e6c7a;position: absolute;">&copy; 2014 REEN.All rights reserved.</p>
+    <div id="navbar3">
+      <a id="a1"href="#home">Home</a>
+      <p> . </p>
+      <a id="a2"href="#portfolio">Portfolio</a>
+      <p> . </p>
+      <a id="a3"href="#blog">Blog</a>
+      <p> . </p>
+      <a id="a4"href="#about">About</a>
+      <p> . </p>
+      <a id="a5"href="#services">Services</a>
+      <p> . </p>
+      <a id="a6"href="#contacts">Contacts</a>
+    </div>
+    <button class="button3">
+      <a href="#navbar1">^</a>
+    </button>
+  </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
