--- a/index.html
+++ b/index.html
@@ -25,39 +25,39 @@
 <body style="height: 3905px;">
   <div  style="background-color:#f5f7fb;height: 73px;">
     <div id="navbar1">
-      <a ><img style="left: 19.53%;position: absolute; top: 15px;padding: 0px;"src="img/mail.png"></a>
-      <a ><img style="left: 20.52%;position: absolute; top: 15px;padding: 0px;"src="img/info.png"></a>
-      <a ><img style="left: 25.94%;position: absolute; top: 13px;padding: 0px;"src="img/phoneico.png"></a>
-      <a ><img style="left: 26.82%;position: absolute; top: 15px;padding: 0px;"src="img/phone.png"></a>
+      <a ><img style="left: 19.53%;position: absolute; top: 15px;padding: 0px;" src="img/mail.png" alt="mail"></a>
+      <a ><img style="left: 20.52%;position: absolute; top: 15px;padding: 0px;" src="img/info.png" alt="info"></a>
+      <a ><img style="left: 25.94%;position: absolute; top: 13px;padding: 0px;" src="img/phoneico.png" alt="phoneico"></a>
+      <a ><img style="left: 26.82%;position: absolute; top: 15px;padding: 0px;" src="img/phone.png" alt="phone"></a>
       <div style="margin-left: 71%;">
-        <a id="l1"  href="https://www.facebook.com"><img src="img/f.png"></a>
-        <a id="l2"  href=""><img src="img/g+.png"></a>
-        <a id="l3"  href="https://www.twitter.com"><img src="img/t.png"></a>
-        <a id="l4"  href="https://www.pintrest.com"><img src="img/p.png"></a>
-        <a id="l5" href="https://www.behance.net"><img src="img/be.png"></a>
-        <a id="l6" href="https://www.dribbble.com"><img src="img/drip.png"></a>
+        <a id="l1" href="https://www.facebook.com"><img src="img/f.png" alt="facebook"></a>
+        <a id="l2" href=""><img src="img/g+.png" alt="g+"></a>
+        <a id="l3" href="https://www.twitter.com"><img src="img/t.png" alt="twitter"></a>
+        <a id="l4" href="https://www.pintrest.com"><img src="img/p.png" alt="pintrest"></a>
+        <a id="l5" href="https://www.behance.net"><img src="img/be.png" alt="behance"></a>
+        <a id="l6" href="https://www.dribbble.com"><img src="img/drip.png" alt="dribbler"></a>
       </div>
     </div>
   </div>
   <div style="background-color:#f5f7fb;height:82px;">
     <div id="navbar2" >
-      <a style="padding:0;left: 19.5%;position: absolute;"><img  id="logo" src="img/logo.png"></a>
+      <a style="padding:0;left: 19.5%;position: absolute;"><img  id="logo" src="img/logo.png" alt="logo"></a>
       <div style="margin-left: 32.55%;">
-        <a href="#home"><img src="img/home.png"></a>
-        <a href="#portfolio"><img src="img/portfolio.png"></a>
-        <a href="#blog"><img src="img/blog.png"></a>
-        <a href="#pages"><img src="img/pages.png"></a>
-        <a href="#features"><img src="img/features.png"></a>
+        <a href="#home"><img src="img/home.png" alt="home"></a>
+        <a href="#portfolio"><img src="img/portfolio.png" alt="portfolio"></a>
+        <a href="#blog"><img src="img/blog.png" alt="blog"></a>
+        <a href="#pages"><img src="img/pages.png" alt="pages"></a>
+        <a href="#features"><img src="img/features.png" alt="features"></a>
         <div class="dropdown">
           <button class="dropbtn" style="padding: 0px;">
-            <a href="#mega menu"><img src="img/megamenu.png"></a>
+            <a href="#megamenu"><img src="img/megamenu.png" alt="megamenu"></a>
           </button>
           <div class="dropdown-content">
             <div class="row">
               <div class="column">
                 <h3>Focus On</h3>
                 <figure class="hover" style="margin-left: 0px;margin-top: 0px;margin-right: 0px;">
-                  <img src="img/pic1.png">
+                  <img src="img/pic1.png" alt="pic1">
                   <div class="text">+</div>
                 </figure>
                 <br>
@@ -76,84 +76,126 @@
               <div class="column">
                 <h3>Latest Works</h3>
                 <figure class="hover" style="margin:0;margin-bottom: 5px;">
-                  <img src="img/pic2.png">
+                  <img src="img/pic2.png" alt="pic2">
                   <div class="text">+</div>
                 </figure>
                 <figure class="hover" style="margin: 0;margin-left: 5px;margin-bottom: 5px;">
-                  <img src="img/pic3.png">
+                  <img src="img/pic3.png" alt="pic3">
                   <div class="text">+</div>
                 </figure>
                 <figure class="hover" style="margin: 0px;margin-bottom: 5px;">
-                  <img src="img/pic4.png">
+                  <img src="img/pic4.png" alt="pic4">
                   <div class="text">+</div>
                 </figure>
                 <figure class="hover" style="margin: 0;margin-left: 5px;margin-bottom: 5px;">
-                  <img src="img/pic5.png">
+                  <img src="img/pic5.png" alt="pic5">
                   <div class="text">+</div>
                 </figure>
                 <figure class="hover" style="margin: 0px;margin-bottom: 5px;">
-                  <img src="img/pic6.png">
+                  <img src="img/pic6.png" alt="pic6">
                   <div class="text">+</div>
                 </figure>
                 <figure class="hover" style="margin: 0;margin-left: 5px;margin-bottom: 5px;">
-                  <img src="img/pic7.png">
+                  <img src="img/pic7.png" alt="pic7">
                   <div class="text">+</div>
                 </figure>
               </div>
               <div class="column">
                 <h3>About Us</h3>
-                <p class="line"style="line-height:1;margin-top:-5px;">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
+                <p class="line" style="line-height:1;margin-top:-5px;">Lorem ipsum dolor sit amet, illum definitiones no quo, maluisset concludaturque et eum, altera fabulas ut quo. Atqui causae gloriatur ius te, id agam omnis evertitur eum. Affert laboramus repudiandae nec et. Inciderint efficiantur his ad. Eum no molestiae voluptatibus.</p>
                 <button class="button1">Read More</button>
               </div>
             </div>
           </div>
         </div>
-        <a href="#conact"><img src="img/conact.png"></a>
-        <a class="searchico" style="left: 78.65%;"><img class="searchico" style="margin-left: 30px;"src="img/search.png"></a>
+        <a href="#conact"><img src="img/conact.png" alt="conact"></a>
+        <a class="searchico" style="left: 78.65%;"><img class="searchico" style="margin-left: 30px;" src="img/search.png" alt="search"></a>
       </div>
   
     </div>
   </div>
-  <div id="main" style="background-image: url(img/bg.png);height: 906px;"></div>
-  <div id="main2" style="background-color: white;height:672px;"></div>
-  <div id="main3" style="background-color:#f2f5f7;height:1270px;"></div>
-  <div id="main4" style="background-color:white;height:482px;">
+  <div id="carousel" style="background-image: url(img/bg.png);background-position: center; height: 880px;">
+    <div id="cbutton1">
+      <button class="minibr" onclick="carouselRight()"><img src="img/ar.png" alt="ar"></button>
+    </div>
+    <div id="cbutton2">
+      <button class="minibl" onclick="carouselLeft()"><img src="img/al.png" alt="al"></button>
+    </div>
+    <div class="in1">
+      <p>MADE FOR DESIGNERS</p>
+      <p class="smaller1">Create your online portfolio in minutes with the professionally and lovingly designed
+        REEN<br>website template Customize your site with versatile and easy to use features.
+      </p>
+      <button class="button4" style="margin-left: 33%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
+    </div>
+    <div class="in2">
+      <p>FRESH AND<br>BEAUTIFUL DESIGN</p>
+      <p class="smaller2">Reen is designed to showcase your talent and put your work in the forefront.<br>
+        Professionally use the typography and layout that fits your content.
+      </p>
+      <button class="button4" style="margin-left: 55%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
+    </div>
+    <div class="in3" style="display: block;">
+      <p>CLEAN AND<br>REUSABLE CODE</p>
+      <p class="smaller3">Reen is designed to showcase your talent and put your work in the forefront.<br>
+        Professionally use the typography and layout that fits your content.
+      </p>
+      <button class="button4" style="margin-left: 33%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
+    </div>
+    <div class="in4" style="display: none;">
+      <p>MADE FOR DESIGNERS</p>
+      <p class="smaller4">Create your online portfolio in minutes with the professionally and lovingly designed
+        REEN<br>website template Customize your site with versatile and easy to use features.
+      </p>
+      <button class="button4" style="margin-left: 33%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
+    </div>
+    <div class="in5" style="display: none;">
+      <p>MADE FOR DESIGNERS</p>
+      <p class="smaller5">Create your online portfolio in minutes with the professionally and lovingly designed
+        REEN<br>website template Customize your site with versatile and easy to use features.
+      </p>
+      <button class="button4" style="margin-left: 33%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
+    </div>
+  </div>
+  <div id="main2" style="background-color: white; height:672px;"></div>
+  <div id="main3" style="background-color:#f2f5f7; height:1270px;"></div>
+  <div id="main4" style="background-color:white; height:482px;">
     <p style="font-size: 40px;text-align:center;font-weight: bold;">Want to work with us?</p>
   </div>
   <div id="footer" style="height:364px;background-color: #2f4052;">
-    <div class="column1"style="margin-left:19.48%;height:270px;">
+    <div class="column1" style="margin-left:19.48%;height:270px;">
       <h3>Who we are</h3>
-      <img src="img/logofooter.png">
+      <img src="img/logofooter.png" alt="logofoot">
       <p>Magnis modipsae voloratati andigen daepeditem quiat.</p>
-      <div><a id="link" href="">More about us <img id="movepic" src="img/arrowright.png"></a></div>
+      <div><a id="link" href="">More about us <img id="movepic" src="img/arrowright.png" alt="arrowright"></a></div>
     </div>
-    <div class="column1"style="margin-left:35.10%;">
+    <div class="column1" style="margin-left:35.10%;">
       <h3>Latest works</h3>
       <figure class="hover" style="margin:0;margin-bottom: 5px;">
-        <img src="img/p1.png">
+        <img src="img/p1.png" alt="p1">
         <div class="text">+</div>
       </figure>
       <figure class="hover" style="margin: 0;margin-left: 5px;margin-bottom: 5px;">
-        <img src="img/p3.png">
+        <img src="img/p3.png" alt="p3">
         <div class="text">+</div>
       </figure>
       <figure class="hover" style="margin: 0px;margin-bottom: 5px;">
-        <img src="img/p2.png">
+        <img src="img/p2.png" alt="p2">
         <div class="text">+</div>
       </figure>
       <figure class="hover" style="margin: 0;margin-left: 5px;margin-bottom: 5px;">
-        <img src="img/p4.png">
+        <img src="img/p4.png" alt="p4">
         <div class="text">+</div>
       </figure>
     </div>
-    <div class="column1"style="margin-left:50.78%;">
+    <div class="column1" style="margin-left:50.78%;">
       <h3>Get in touch</h3>
       <p style="margin:0px;">Doloreiur quia commolu ptatemp dolupta oreprerum t</p>
-      <p style="margin: 0px;margin-top: 10px;"><img style="margin-bottom: 2px;"src="img/nav.png">   84 Street,City,State 24813</p>
-      <p style="margin: 0px;margin-top: 7px;"><img style="margin-bottom: 2px;"src="img/phoneico.png">   +00 (123) 456 78 90</p>
-      <p style="margin: 0px;margin-top: 7px;"><img style="margin-bottom: 2px;"src="img/mail.png">   <a id="link" href="">info@reen.com</a></p>
+      <p style="margin: 0px;margin-top: 10px;"><img style="margin-bottom: 2px;" src="img/nav.png" alt="nav">   84 Street,City,State 24813</p>
+      <p style="margin: 0px;margin-top: 7px;"><img style="margin-bottom: 2px;" src="img/phoneico.png" alt="phone">   +00 (123) 456 78 90</p>
+      <p style="margin: 0px;margin-top: 7px;"><img style="margin-bottom: 2px;" src="img/mail.png" alt="mail">   <a id="link1" href="">info@reen.com</a></p>
     </div>
-    <div class="column1"style="margin-left:66.35%;">
+    <div class="column1" style="margin-left:66.35%;">
       <h3>Free update</h3>
       <p style="margin: 0px;">Conecus iure posae volor remped modis  aut lor vol</p>
       <form>
@@ -165,17 +207,17 @@
   <div id="footer2" style="height:86px;background-color: #283645;">
     <p style="margin:0px;margin-left:19.53%;padding-top:30px;color:#5e6c7a;position: absolute;">&copy; 2014 REEN.All rights reserved.</p>
     <div id="navbar3">
-      <a id="a1"href="#home">Home</a>
+      <a id="a1" href="#home">Home</a>
       <p> . </p>
-      <a id="a2"href="#portfolio">Portfolio</a>
+      <a id="a2" href="#portfolio">Portfolio</a>
       <p> . </p>
-      <a id="a3"href="#blog">Blog</a>
+      <a id="a3" href="#blog">Blog</a>
       <p> . </p>
-      <a id="a4"href="#about">About</a>
+      <a id="a4" href="#about">About</a>
       <p> . </p>
-      <a id="a5"href="#services">Services</a>
+      <a id="a5" href="#services">Services</a>
       <p> . </p>
-      <a id="a6"href="#contacts">Contacts</a>
+      <a id="a6" href="#contacts">Contacts</a>
     </div>
     <button class="button3">
       <a href="#navbar1">^</a>
