--- a/index.html
+++ b/index.html
@@ -121,38 +121,40 @@
     <div id="cbutton2">
       <button class="minibl" onclick="carouselLeft()"><img src="img/al.png" alt="al"></button>
     </div>
-    <div class="in1">
+    <div id="in1" style="display: block;">
       <p>MADE FOR DESIGNERS</p>
       <p class="smaller1">Create your online portfolio in minutes with the professionally and lovingly designed
         REEN<br>website template Customize your site with versatile and easy to use features.
       </p>
       <button class="button4" style="margin-left: 33%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
     </div>
-    <div class="in2">
+    <div id="in2">
       <p>FRESH AND<br>BEAUTIFUL DESIGN</p>
       <p class="smaller2">Reen is designed to showcase your talent and put your work in the forefront.<br>
         Professionally use the typography and layout that fits your content.
       </p>
       <button class="button4" style="margin-left: 55%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
     </div>
-    <div class="in3" style="display: block;">
-      <p>CLEAN AND<br>REUSABLE CODE</p>
+    <div id="in3">
+      <p style="margin-top: 0px;margin-bottom:5px;">CLEAN AND</p>
+      <p style="margin-top: 0px;margin-bottom:60px;">REUSABLE CODE</p>
       <p class="smaller3">Reen is designed to showcase your talent and put your work in the forefront.<br>
         Professionally use the typography and layout that fits your content.
       </p>
-      <button class="button4" style="margin-left: 33%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
+      <button class="button4" style="margin-top: 50px;width:200px;font-size: 13px;">GET STARTED NOW</button>
     </div>
-    <div class="in4" style="display: none;">
-      <p>MADE FOR DESIGNERS</p>
-      <p class="smaller4">Create your online portfolio in minutes with the professionally and lovingly designed
-        REEN<br>website template Customize your site with versatile and easy to use features.
+    <div id="in4">
+      <p style="margin-top: 0px;margin-bottom:5px;margin-left: 300px;">FOCUS ON</p>
+      <p style="margin-top: 0px;margin-bottom:60px;margin-left: 75px;">YOUR CREATIVITY</p>
+      <p class="smaller4">Take a break from messing around with heavy coding and spend your<br>
+        time brainstorming ideas for your next project.
       </p>
-      <button class="button4" style="margin-left: 33%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
+      <button class="button4" style="margin-left: 60%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
     </div>
-    <div class="in5" style="display: none;">
-      <p>MADE FOR DESIGNERS</p>
-      <p class="smaller5">Create your online portfolio in minutes with the professionally and lovingly designed
-        REEN<br>website template Customize your site with versatile and easy to use features.
+    <div id="in5">
+      <p style="margin-left: 13%;margin-top: -90px;">SHOW CASE<br>YOUR CONTENT</P>
+      <p style="margin-left: 13%;" class="smaller5">With REEN you have the possibillity to create websites for various
+        <br>contents quickly and easily.Now it's up to you!
       </p>
       <button class="button4" style="margin-left: 33%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
     </div>
