--- a/index.html
+++ b/index.html
@@ -1,11 +1,12 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="en">
 
 <head>
   <meta charset="utf-8">
   <title>Reen</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="icon" type="image/png" href="r.png">
 
   <meta property="og:title" content="">
   <meta property="og:type" content="">
@@ -49,9 +50,7 @@
         <a href="#pages"><img src="img/pages.png" alt="pages"></a>
         <a href="#features"><img src="img/features.png" alt="features"></a>
         <div class="dropdown">
-          <button class="dropbtn" style="padding: 0px;">
-            <a href="#megamenu"><img src="img/megamenu.png" alt="megamenu"></a>
-          </button>
+            <a class="dropbtn" style="padding: 0px;" href="#megamenu"><img src="img/megamenu.png" alt="megamenu"></a>
           <div class="dropdown-content">
             <div class="row">
               <div class="column">
@@ -133,7 +132,7 @@
       <p class="smaller2">Reen is designed to showcase your talent and put your work in the forefront.<br>
         Professionally use the typography and layout that fits your content.
       </p>
-      <button class="button4" style="margin-left: 55%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
+      <button class="button4" style="margin-left: 52.6%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
     </div>
     <div id="in3">
       <p style="margin-top: 0px;margin-bottom:5px;">CLEAN AND</p>
@@ -141,7 +140,7 @@
       <p class="smaller3">Reen is designed to showcase your talent and put your work in the forefront.<br>
         Professionally use the typography and layout that fits your content.
       </p>
-      <button class="button4" style="margin-top: 50px;width:200px;font-size: 13px;">GET STARTED NOW</button>
+      <button class="button4" style="margin-top: 50px;width:200px;font-size: 13px;margin-right: 10px;">GET STARTED NOW</button>
     </div>
     <div id="in4">
       <p style="margin-top: 0px;margin-bottom:5px;margin-left: 300px;">FOCUS ON</p>
@@ -149,20 +148,94 @@
       <p class="smaller4">Take a break from messing around with heavy coding and spend your<br>
         time brainstorming ideas for your next project.
       </p>
-      <button class="button4" style="margin-left: 60%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
+      <button class="button4" style="margin-left: 58%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
     </div>
     <div id="in5">
-      <p style="margin-left: 13%;margin-top: -90px;">SHOW CASE<br>YOUR CONTENT</P>
-      <p style="margin-left: 13%;" class="smaller5">With REEN you have the possibillity to create websites for various
+      <p style="margin-left: 14%;margin-top: -90px;">SHOW CASE<br>YOUR CONTENT</P>
+      <p style="margin-left: 12%;" class="smaller5">With REEN you have the possibillity to create websites for various
         <br>contents quickly and easily.Now it's up to you!
       </p>
       <button class="button4" style="margin-left: 33%;margin-top: 50px;width:200px;">GET STARTED NOW</button>
     </div>
+    <div id="pagination">
+      <img style="position:absolute;border:3px solid;border-color: #00bc9c;border-radius: 5px;" src="img/pagi.png" alt="pagi">
+      <img id="dot1" style="position: absolute;margin-left: 18px;margin-top: 15px;display: none;" src="img/dot.png" alt="dot">
+      <img id="dot2" style="position: absolute;margin-left: 43px;margin-top: 15px;display: none;" src="img/dot.png" alt="dot">
+      <img id="dot3" style="position: absolute;margin-left: 68px;margin-top: 15px;display: block;" src="img/dot.png" alt="dot">
+      <img id="dot4" style="position: absolute;margin-left: 93px;margin-top: 15px;display: none;" src="img/dot.png" alt="dot">
+      <img id="dot5" style="position: absolute;margin-left: 118px;margin-top: 15px;display: none;" src="img/dot.png" alt="dot">
+    </div>
   </div>
-  <div id="main2" style="background-color: white; height:672px;"></div>
-  <div id="main3" style="background-color:#f2f5f7; height:1270px;"></div>
+  <div id="main2" style="background-color: white; height:672px;">
+    <div>
+      <p class="part1">Beautiful. Clean. Responsive</p>
+    </div>
+    <div>
+      <p class="part2">REEN is a high-quality solution for those who want a beautiful website in no time.<br>
+        It's fully responsive and will adapt itself to any mobile device.i Pad, iPhone, Android, <br>
+        it doesn't matter.Your content will always looks its absolute best.
+        </p>
+    </div>
+    <div class="column2" style="margin-left: 18.95%;">
+      <img src="img/heart.png" alt="heart" style="position: absolute;left: 0px;">
+      <p class="par1">Passion</p>
+      <p class="par2">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor laceaque quiae sitiorem rest non restibusaes maio es dem tumquam pro pusaae volor remped modis volor.</p>
+    </div>
+    <div class="column2" style="margin-left: 40.61%;">
+      <img src="img/lamp.png" alt="lamp" style="position: absolute;left: 0px;">
+      <p class="par1">Creativity</p>
+      <p class="par2">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor laceaque quiae sitiorem rest non restibusaes maio es dem tumquam pro pusaae volor remped modis volor.<p>
+    </div>
+    <div class="column2" style="margin-left: 60.93%;">
+      <img src="img/star.png" alt="star" style="position: absolute;left: 0px;">
+      <p class="par1">Quality</p>
+      <p  class="par2">Magnis modipsae que lib voloratati andigen daepeditem quiate re porem aut labor laceaque quiae sitiorem rest non restibusaes maio es dem tumquam pro pusaae volor remped modis volor.</p>
+    </div>
+  </div>
+  <div id="main3" style="background-color:#f2f5f7; height:1270px;">
+    <div id="in7">
+        <p style="margin-top: 0px;">Check out our latest works</p>
+        <p class="smaller7" style="margin-left: 12.4%;">Magnis modipsae que voloratati andigen daepeditme quiate re porem aut labor.</p>
+    </div>
+    <div style="position: absolute;margin-top: 25%;margin-left: 10.5%;">
+      <figure id="fig" class="hover2" style="margin:0;margin-bottom: 5px;margin-right: 20px;">
+        <img src="img/bigpic1.png" alt="bp1">
+        <div class="text">+</div>
+        <figcaption id="fig1" style="font-size: larger;text-align: center;margin-top: 30px;color:#506a85;">Grand Motel gets an identity brushup</figcaption>
+      </figure>
+      <figure id="fig2" class="hover2" style="margin:0;margin-bottom: 5px;">
+        <img src="img/bigpic2.png" alt="bp2">
+        <div class="text">+</div>
+        <figcaption id="fig3" style="font-size: larger;text-align: center;margin-top: 30px;color:#506a85;">Fresh branding for a creative startup</figcaption>
+      </figure>
+    </div>
+    <div style="position: absolute;margin-top: 60%;margin-left: 10.5%;">
+      <figure class="hover3" style="margin:0;margin-bottom: 5px;">
+        <img src="img/smallpic1.png" alt="sp1">
+        <div class="text1">Simpli Nota</div>
+      </figure>
+      <figure class="hover3" style="margin:0;margin-bottom: 5px;margin-left: 26px;">
+        <img src="img/smallpic2.png" alt="sp1">
+        <div class="text1">Vinyl Records</div>
+      </figure>
+      <figure class="hover3" style="margin:0;margin-bottom: 5px;margin-left: 26px;">
+        <img src="img/smallpic3.png" alt="sp1">
+        <div class="text1">Astor & Yancy<br>Identity</div>
+      </figure>
+      <figure class="hover3" style="margin:0;margin-bottom: 5px;margin-left: 26px;">
+        <img src="img/smallpic4.png" alt="sp1">
+        <div class="text1">Signwall</div>
+      </figure>
+    </div>
+  </div>
   <div id="main4" style="background-color:white; height:482px;">
-    <p style="font-size: 40px;text-align:center;font-weight: bold;">Want to work with us?</p>
+    <div id="in6" style="top: 2865px;">
+      <p style="color: #506a85;margin-left: 6%;">Want to work with us?</p>
+      <p class="smaller6" style="margin-left: 1.6%;">Create your online portfolio in minutes with the professionally and lovingly designed
+        REEN<br>website template Customize your site with versatile and easy to use features.
+      </p>
+      <button class="button4" style="margin-left: 32.5%;margin-top: 50px;width:200px;">GET IN TOUCH</button>
+    </div>
   </div>
   <div id="footer" style="height:364px;background-color: #2f4052;">
     <div class="column1" style="margin-left:19.48%;height:270px;">
@@ -221,9 +294,7 @@
       <p> . </p>
       <a id="a6" href="#contacts">Contacts</a>
     </div>
-    <button class="button3">
-      <a href="#navbar1">^</a>
-    </button>
+      <a class="button3" href="#navbar1">^</a>
   </div>
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
